# GPUBenchmark

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
cmake/: EmbedBinary.cmake  EmbedText.cmake
src/: main.cpp
src/backends/: cuda_backend.cpp  cuda_backend.hpp  hip_backend.cpp  hip_backend.hpp  opencl_backend.cpp  opencl_backend.hpp  opengl_backend.cpp  opengl_backend.hpp
src/backends/linux/: cuda_backend.cpp  hip_backend.cpp  opencl_backend.cpp  shared.cpp
src/backends/macos/: cuda_backend.cpp  hip_backend.cpp  opencl_backend.cpp  shared.cpp
src/backends/modules/: cuda_kernels.cu  hip_kernels.cu  opencl_kernels.cl
src/backends/modules/gl_backends/: aluHeavyFrag.glsl  aluHeavyFrag.hpp  memHeavyFrag.glsl  memHeavyFrag.hpp  triangleFrag.glsl  triangleFrag.hpp  triangleVer.glsl  triangleVer.hpp
src/backends/windows/: cuda_backend.cpp  hip_backend.cpp  opencl_backend.cpp  shared.cpp
src/shared/: shared.cpp  shared.hpp
